--- a/django_react_credit/frontend/package.json
+++ b/django_react_credit/frontend/package.json
@@ -15,7 +15,8 @@
     "postcss": "^8.5.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.6.2",
+    "react-image-crop": "^11.0.10",
+    "react-router-dom": "^7.6.3",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
