--- a/django_react_credit/frontend/package.json
+++ b/django_react_credit/frontend/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "classnames": "^2.5.1",
+    "html2canvas": "^1.4.1",
     "lucide-react": "^0.525.0",
     "postcss": "^8.5.6",
     "react": "^19.1.0",
