--- a/MainServer/.env
+++ b/MainServer/.env
@@ -5,8 +5,8 @@ DB_NAME=railway
 ##Database/Credentials/User
 DB_USER=postgres
 #Database/Credentials/Pass
-DB_PASSWORD=uwrMTVPubvYSCddYLJartAMjnEfMcXbr
+DB_PASSWORD=aEcdRmfImpkFxyVjWqHYyphwVfmialRF
 #RAILWAY_TCP_PROXY_DOMAIN
-DB_HOST=centerbeam.proxy.rlwy.net
+DB_HOST=ballast.proxy.rlwy.net 
 #RAILWAY_TCP_PROXY_PORT
-DB_PORT=38429
+DB_PORT=23461
